--- a/styles/Homes.module.scss
+++ b/styles/Homes.module.scss
@@ -1,11 +1,11 @@
 /** @format */
 
-.workImg {
+/*.workImg {
 	object-fit: cover;
 	width: 100%;
 	height: 600px;
 	border-radius: 50px;
-}
+}*/
 
 @mixin cardItem_theme($name, $delay) {
 	animation-name: $name;
@@ -196,12 +196,32 @@
 }
 
 .carousel {
-	max-width: 1200px;
-	height: 600px;
-	margin: auto;
+	max-width: '100%';
 	border-radius: 50px;
 	overflow: hidden;
 }
+@media screen and (min-width: 600px) {
+	.carousel {
+		height: 600px;
+	}
+	.carouselItem {
+		height: 600px;
+	}
+}
+@media screen and (max-width: 600px) {
+	.carousel {
+		height: 300px;
+	}
+	.carouselItem {
+		height: 300px;
+	}
+}
+
+.carouselItem {
+	position: 'relative';
+	width: 100%;
+}
+
 .contentBox {
 	background: linear-gradient(
 			217deg,
